# investment

./: README.md  config.yml  extract_zips_from_directory.sh  output.txt  pyproject.toml
.github/workflows/: java-backend-tests.yml
calculation/: profit_calculation.py
data/: .~lock.nordea_omistukset.xlsx#  companies.csv  country.csv  form8a_spec.csv  isin_country_code.csv  nordnet_holdings.csv  sp500_companies.csv
daybook/: README.md
daybook/domain_knowledge/: README.md
daybook/financial-accounting/: README.md
financialstatements/: __main__.py  balance_sheet.py  calc.py  cli.py  income_item.py
financialstatements/incomestatement/: income_item.py  income_statement.py
financialstatements/pdfgeneration/: income_statement.typ  pdf_generator.py
investment/: company.py  text_io.py  util.py
investment/accounting/: __init__.py  __main__.py  cli.py  composite_generator.py  generator.py  models.py  profit_calculation.py  util.py
investment/data_fetch/: __main__.py  company_fetcher.py  ecb_fetcher.py  models.py  yfinance_fetcher.py
investment/holdings/: __main__.py  holdings_extractor.py  holdings_snapshot.py  models.py
investment/holdings/calculation/: lots_matching.py
investment/io/: csv_writer.py
investment/market_quote/: __init__.py  __main__.py  ecb_fetcher.py  fetcher.py  models.py  repository.py  yahoo_finance_fetcher.py  yfinance_fetcher.py
investment/portfolio/: __main__.py  calculation.py  lots_matching.py  transaction_filters.py  twr.py  util.py
investment/rest_api/: __init__.py  __main__.py  holdings.py
investment/tax_report/: __init__.py  cli.py  generator.py  models.py  securites_included_in_financial_assets.py
java-backend/: local_run.sh  pom.xml  send_irr_request.sh
java-backend/daybook/: README.md
shell_scripts/: demo.sh
tax_report/: pdfgenerator.py
tests/: test_company.py
tests/accounting/: test_trading_profit_in_fifo.py
tests/calculation/: test_trading_profit_in_fifo.py
tests/data_fetch/: test_company.py  test_ecb_fetcher.py
tests/financialstatements/: test_calc.py  test_income_item.py
tests/integration/: test_time_weighted_return_by_period.py
tests/market_quote/: test_ecb_fetcher.py  test_repository.py  test_yfinance_fetcher.py
tests/portfolio/: test_calculation.py  test_lots_matching.py  test_twr.py  test_twr_SubPeriodReturn.py
tests/tax_report/: test_models.py
(+166 files in other folders)
