[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "investment"
version = "1.0-beta"
requires-python = ">=3.12.3"
dependencies = [
    "pandas",
    "typst",
    "requests",
    "pypdf",
    "pdfplumber",
    "PyYAML",
    "python-dotenv",
    "pycurl",
    "certifi",
    "openpyxl",
    "yfinance"
]

[tool.setuptools.packages.find]
include = ["ai_tool*", "investment*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.package-data]
"investment.accounting.financialstatements.pdfgeneration" = ["*.typ"]
"investment.tax_report.pdf" = ["*.typ"]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "ruff",
]
ai_tool = [
    "openai",
]
